--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -62,6 +62,18 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
+          components: llvm-tools-preview
       
-      - name: Run tests
-        run: cargo test --verbose
+      - name: Install Tarpaulin
+        run: cargo install cargo-tarpaulin
+      
+      - name: Run tests with coverage
+        run: cargo tarpaulin --workspace --all-features --out Xml --output-dir target/tarpaulin/
+        env:
+          CARGO_INCREMENTAL: 0
+      
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: target/tarpaulin/cobertura.xml
+          verbose: true
