--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -88,6 +88,7 @@ jobs:
             --workspace \
             --timeout 120 \
             --out xml \
+            --exclude-files "src/bin/*" \
             --output-dir target/tarpaulin/
       
       - name: Upload to Codecov
