--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ serde = { version = "1.0", features = ["derive"] }
 base64 = "0.21"
 rayon = "1.9"
 serde_json = "1.0"
+rand = "0.9.0"
 
 [dev-dependencies]
 tempfile = "3.3"
