--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ rand = "0.9.0"
 
 [dev-dependencies]
 tempfile = "3.3"
+hf-hub = "0.4.1"
+candle-core = "0.8.2"
+candle-transformers = "0.8.2"
+candle-nn = "0.8.2"
+tokenizers = "0.21.0"
+anyhow = "1.0"
 
 [[bin]]
 name = "benchmark"
