--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -66,7 +66,7 @@ jobs:
       
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-03-01
           components: llvm-tools-preview
       
       - name: Cache cargo
