--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -66,7 +66,7 @@ jobs:
       
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly-2024-03-01
+          toolchain: nightly
           components: llvm-tools-preview
       
       - name: Cache cargo
@@ -89,8 +89,6 @@ jobs:
             --timeout 120 \
             --out xml \
             --exclude-files "src/bin/*" \
-            --exclude-files "pulp/**" \
-            --skip-clean \
             --output-dir target/tarpaulin/
       
       - name: Upload to Codecov
