--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = "1.0"
 rand = "0.9.0"
 
 [dev-dependencies]
+pulp = "0.21.4"
+num-complex = "0.4.6"
 tempfile = "3.3"
 hf-hub = "0.4.1"
 candle-core = "0.8.2"
