Try updating pulp

--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -79,6 +79,9 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
+
+      - name: Force dependency update
+        run: cargo update -p pulp
       
       - name: Run Tarpaulin
         run: |
