--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt
+          components: rustfmt, clippy
       
       - name: Cache cargo
         uses: actions/cache@v4
@@ -53,6 +53,9 @@ jobs:
       
       - name: Check build
         run: cargo check --all-features
+
+      - name: Check clippy
+        run: cargo clippy --all-targets --all-features
 
   test:
     name: Coverage Tests
