--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ base64 = "0.21"
 rayon = "1.9"
 serde_json = "1.0"
 rand = "0.9.0"
+ordered-float = "4.6.0"
+bytemuck = "1.21.0"
 
 [dev-dependencies]
 tempfile = "3.3"
