--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -11,15 +11,12 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages-${{ github.ref }}"
-  cancel-in-progress: false
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
 
@@ -32,10 +29,20 @@ jobs:
         run: |
           cd docs
           mdbook build --dest-dir ../book
-          touch ../book/.nojekyll  # Required for GitHub Pages
+          touch ../book/.nojekyll
 
-      - name: Deploy to Github pages
-        uses: JamesIves/github-pages-deploy-action@15de0f09300eea763baee31dff6c6184995c5f6a
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: github_pages
-          folder: ./book
+          path: ./book
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
