--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ hf-hub = "0.4.1"
 candle-core = "0.8.2"
 candle-transformers = "0.8.2"
 candle-nn = "0.8.2"
+candle-datasets = "0.8.2"
 tokenizers = "0.21.0"
+parquet = "54.1.0"
 
 [[bin]]
 name = "benchmark"
