--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ candle-nn = "0.8.2"
 candle-datasets = "0.8.2"
 tokenizers = "0.21.0"
 parquet = "54.1.0"
+colored = "3.0.0"
+comfy-table = "7.1.4"
 
 [[bin]]
 name = "benchmark"
