--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -12,6 +12,7 @@ on:
       - '**.rs'
       - Cargo.lock
       - Cargo.toml
+      - README.md
   pull_request:
     branches:
       - main
@@ -20,6 +21,7 @@ on:
       - '**.rs'
       - Cargo.lock
       - Cargo.toml
+      - README.md
 
 env:
   CARGO_TERM_COLOR: always
